// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups snapshots loading 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Groups snapshots network error 1`] = `
<div>
  <div>
    Error: 
    {"graphQLErrors":[],"networkError":{},"message":"network-error"}undefined
  </div>
</div>
`;
